--- a/font-sample.html
+++ b/font-sample.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+<link href="https://fonts.googleapis.com/css?family=Baloo|Roboto|Lato" rel="stylesheet">
+
 <style>
-body {
-  font-family: "Sofia", sans-serif;
+h1 {
+  font-family: Baloo;
+}
+h2 {
+  font-family: Roboto;
+}
+h3 {
+  font-family: Lato;
 }
 </style>
 </head>
 <body>
 
-<h1>Sofia Font</h1>
-<p>Lorem ipsum dolor sit amet.</p>
-<p>123456790</p>
+<h1>This is the Baloo font</h1>
+<h2>This is the Roboto font</h2>
+<h3>This is the Lato font</h3>
+
 
 </body>
 </html>
