--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <a href="css_demo.html">This is a link to the demo file</a>
-    <h1>Demo for my HCI class</h1>
+    <h1>I made a change to Demo for my HCI class</h1>
     <p>This is a sample web page that links github to Heroku for pure Awesome</p>
     <p><a href="font-sample.html">This is a link to the font-sample file</a></p>
     <h4>Diep Nguyen</h4>
