--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>I made a change to Demo for my HCI class</h1>
     <p>This is a sample web page that links github to Heroku for pure Awesome</p>
     <p><a href="font-sample.html">This is a link to the font-sample file</a></p>
+    <p><a href="bootstrap-sample.html">This is a link to the bootstrap file </a></p>
     <h4>Diep Nguyen</h4>
    </body>
 </html>
