--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -11,17 +11,26 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
+    <button type="button" class="btn btn-primary">Primary</button>
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fgreatergood.berkeley.edu%2Farticle%2Fitem%2Fthe_science_backed_benefits_of_being_a_dog_owner&psig=AOvVaw302sAQoc6bi4SxxPZCqyhe&ust=1651615189981000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCJC3yJrowfcCFQAAAAAdAAAAABAD" 
+    class="img-fluid" alt="Dog Image">
+    <div class="jumbotron text-center">
+  <h1>My First Bootstrap Page</h1>
+  <p>Three Rows and Collumns</p> 
+</div>
+    
+    <div class="container">
+  <div class="row">
+    <div class="col order-last">
+      First in DOM, ordered last
+    </div>
+    <div class="col">
+      Second in DOM, unordered
+    </div>
+    <div class="col order-first">
+      Third in DOM, ordered first
+    </div>
+  </div>
+</div>
   </body>
 </html>
