--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -8,27 +8,28 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Bootstrap!</title>
   </head>
   <body>
     <button type="button" class="btn btn-primary">Primary</button>
     <div class="jumbotron text-center">
-  <h1>My First Bootstrap Page</h1>
-  <p>Three Rows and Collumns</p> 
-</div>
+  
+      <h1>My First Bootstrap Page</h1>
+        <p>Three Rows and Collumns</p> 
+    </div>
     
     <div class="container">
-  <div class="row">
-    <div class="col order-last">
-      First in DOM, ordered last
-    </div>
-    <div class="col">
+    <div class="row">
+       <div class="col order-last">
+         First in DOM, ordered last
+       </div>
+      <div class="col">
       Second in DOM, unordered
-    </div>
-    <div class="col order-first">
+      </div>
+      <div class="col order-first">
       Third in DOM, ordered first
+      </div>
     </div>
-  </div>
-</div>
+    </div>
   </body>
 </html>
