--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -31,5 +31,8 @@
       </div>
     </div>
     </div>
+    
+    <img src="img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
+    
   </body>
 </html>
