--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -32,7 +32,7 @@
     </div>
     </div>
     
-    <img src="img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
+    <img src="https://i.insider.com/5484d9d1eab8ea3017b17e29?width=600&format=jpeg&auto=webp"class="img-fluid" alt="Responsive Image"/>
     
   </body>
 </html>
