--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -11,8 +11,13 @@
     <title>Bootstrap!</title>
   </head>
   <body>
-    <button type="button" class="btn btn-primary">Primary</button>
-    <div class="jumbotron text-center">
+    <div class="container">
+  <div class="row">
+    <div class="col text-center">
+      <button class="btn btn-default">Centered button</button>
+    </div>
+  </div>
+</div>
   
       <h1>My First Bootstrap Page</h1>
         <p>Three Rows and Collumns</p> 
