--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -14,7 +14,7 @@
     <div class="container">
   <div class="row">
     <div class="col text-center">
-      <button class="btn btn-default">Centered button</button>
+      <button type="button" class="btn btn-primary">Centered button</button>
     </div>
   </div>
 </div>
