--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -19,8 +19,13 @@
   </div>
 </div>
   
+        <div class="container">
+  <div class="row">
+    <div class="col text-center">
       <h1>My First Bootstrap Page</h1>
         <p>Three Rows and Collumns</p> 
+    </div>
+    </div>
     </div>
     
     <div class="container">
