--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -12,34 +12,34 @@
   </head>
   <body>
     <div class="container">
-  <div class="row">
-    <div class="col text-center">
-      <button type="button" class="btn btn-primary">Centered button</button>
+      <div class="row">
+        <div class="col text-center">
+         <button type="button" class="btn btn-primary">Iam a button</button>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
   
-        <div class="container">
-  <div class="row">
-    <div class="col text-center">
-      <h1>My First Bootstrap Page</h1>
-        <p>Three Rows and Collumns</p> 
-    </div>
-    </div>
-    </div>
+     <div class="container">
+      <div class="row">
+        <div class="col text-center">
+          <h1>My First Bootstrap Page</h1>
+          <p>Three Rows and Stacking Collumns</p> 
+         </div>
+       </div>
+      </div>
     
     <div class="container">
-    <div class="row">
-       <div class="col order-last">
-         First in DOM, ordered last
+      <div class="row">
+       <div class="col-md-3">
+         First Column
        </div>
-      <div class="col">
-      Second in DOM, unordered
+       <div class="col-md-3">
+         Second Column
+       </div>
+       <div class="col-md-3">
+         Third Column
+       </div>
       </div>
-      <div class="col order-first">
-      Third in DOM, ordered first
-      </div>
-    </div>
     </div>
     
     <img src="https://i.insider.com/5484d9d1eab8ea3017b17e29?width=600&format=jpeg&auto=webp"class="img-fluid" alt="Responsive Image"/>
