--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -42,7 +42,11 @@
       </div>
     </div>
     
-    <img src="https://i.insider.com/5484d9d1eab8ea3017b17e29?width=600&format=jpeg&auto=webp"class="img-fluid" alt="Responsive Image"/>
+    <div class="container">
+      <div class="row">
+        <img src="https://www.liveabout.com/thmb/9oyhVbEg1OHIPqxsUSe9Pif61U8=/640x640/filters:no_upscale():max_bytes(150000):strip_icc()/superdog-treadmill-5af44eb2eb97de003d8c771d.gif"class="img-fluid" alt="Chihuahua Running On A Treadmil"/>
+      </div>
+    </div>
     
   </body>
 </html>
