--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -22,22 +22,22 @@
      <div class="container">
       <div class="row">
         <div class="col text-center">
-          <h1>My First Bootstrap Page</h1>
-          <p>Three Rows and Stacking Collumns</p> 
+          <h1>Welcome to my excercise nook!</h1>
+          <p>You can learn some facts about me below:</p> 
          </div>
        </div>
       </div>
     
     <div class="container">
-      <div class="row">
+      <div class="row text-center">
        <div class="col-md-3">
-         First Column
+         My name is Chi the hero
        </div>
        <div class="col-md-3">
-         Second Column
+         Iam 6 months old
        </div>
        <div class="col-md-3">
-         Third Column
+         I love running
        </div>
       </div>
     </div>
