--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="row">
         <div class="col text-center">
-         <button type="button" class="btn btn-primary">Iam a button</button>
+         <button type="button" class="btn btn-primary">Dm Me!</button>
         </div>
       </div>
     </div>
@@ -31,7 +31,7 @@
     <div class="container">
       <div class="row text-center">
        <div class="col-md-3">
-         My name is Chi the hero
+         My name is Chi-the-hero
        </div>
        <div class="col-md-3">
          Iam 6 months old
