--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -11,7 +11,7 @@
     <title>Bootstrap!</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col text-center">
          <button type="button" class="btn btn-primary">Dm Me!</button>
@@ -19,7 +19,7 @@
       </div>
     </div>
   
-     <div class="container">
+     <div class="container-fluid">
       <div class="row">
         <div class="col text-center">
           <h1>Welcome to my excercise nook!</h1>
@@ -28,7 +28,7 @@
        </div>
       </div>
     
-    <div class="container">
+    <div class="container-fluid">
       <div class="row text-center">
        <div class="col-md-3">
          My name is Chi-the-hero
@@ -42,7 +42,7 @@
       </div>
     </div>
     
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <img src="https://www.liveabout.com/thmb/9oyhVbEg1OHIPqxsUSe9Pif61U8=/640x640/filters:no_upscale():max_bytes(150000):strip_icc()/superdog-treadmill-5af44eb2eb97de003d8c771d.gif"class="img-fluid" alt="Chihuahua Running On A Treadmil"/>
       </div>
