--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -12,18 +12,27 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col text-center">
+      <div class="row text-center">
+        <div class="col-6">
          <button type="button" class="btn btn-primary">Dm Me!</button>
+        </div>
+        <div class="col-6">
+         <button type="button" class="btn btn-success">Hire Me For Your Next Commercials</button>
         </div>
       </div>
     </div>
   
      <div class="container-fluid">
-      <div class="row">
-        <div class="col text-center">
+      <div class="row text-center">
+        <div class="col-3">
           <h1>Welcome to my excercise nook!</h1>
-          <p>You can learn some facts about me below:</p> 
+          <p>On the right are fun facts about me</p> 
+         </div>
+        <div class="col-4">
+          <p>I was born in Mexico in Novemver 2021. My human mom rescued me and brought me to the US in February of 2022. I love it here so much because I get a lot of attention by just walking around the neighborhood</p> 
+         </div>
+        <div class="col-5">
+          <img src="https://www.liveabout.com/thmb/9oyhVbEg1OHIPqxsUSe9Pif61U8=/640x640/filters:no_upscale():max_bytes(150000):strip_icc()/superdog-treadmill-5af44eb2eb97de003d8c771d.gif"class="img-fluid" alt="Chihuahua Running On A Treadmil"/>
          </div>
        </div>
       </div>
