--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -29,23 +29,29 @@
           <p>On the right are fun facts about me</p> 
          </div>
         <div class="col-4">
+          <h2>About Me
           <p>I was born in Mexico in Novemver 2021. My human mom rescued me and brought me to the US in February of 2022. I love it here so much because I get a lot of attention by just walking around the neighborhood</p> 
          </div>
         <div class="col-5">
-          <img src="https://www.liveabout.com/thmb/9oyhVbEg1OHIPqxsUSe9Pif61U8=/640x640/filters:no_upscale():max_bytes(150000):strip_icc()/superdog-treadmill-5af44eb2eb97de003d8c771d.gif"class="img-fluid" alt="Chihuahua Running On A Treadmil"/>
+          <h2>Things I love
+          <ul>
+            <li>Freshly sliced fruits</li>
+            <li>Filtered water</li>
+            <li>All types of toys</li>
+          </ul>
          </div>
        </div>
       </div>
     
     <div class="container-fluid">
       <div class="row text-center">
-       <div class="col-md-3">
+       <div class="col-md-4">
          My name is Chi-the-hero
        </div>
-       <div class="col-md-3">
+       <div class="col-md-4">
          Iam 6 months old
        </div>
-       <div class="col-md-3">
+       <div class="col-md-4">
          I love running
        </div>
       </div>
