--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
       <div class="row text-center">
         <div class="col-6">
-         <button type="button" class="btn btn-primary">Dm Me!</button>
+         Chi's Empire
         </div>
         <div class="col-6">
          <button type="button" class="btn btn-success">Hire Me For Your Next Commercials</button>
