--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -14,10 +14,10 @@
     <div class="container-fluid">
       <div class="row text-center">
         <div class="col-6">
-         Chi's Empire
+         <h1> Welcome to Chi's Empire</h1>
         </div>
         <div class="col-6">
-         <button type="button" class="btn btn-success">Hire Me For Your Next Commercials</button>
+         <button type="button" class="btn btn-success">Contact Me</button>
         </div>
       </div>
     </div>
@@ -25,15 +25,16 @@
      <div class="container-fluid">
       <div class="row text-center">
         <div class="col-3">
-          <h1>Welcome to my excercise nook!</h1>
-          <p>On the right are fun facts about me</p> 
+          <h2>About Me</h2>
+          <p>I was born in Mexico in Novemver 2021. My human mom rescued me and brought me to the US in February of 2022. I love it here so much because I get a lot of attention by just walking around the neighborhood</p> 
          </div>
         <div class="col-4">
-          <h2>About Me</h2>
-            <p>I was born in Mexico in Novemver 2021. My human mom rescued me and brought me to the US in February of 2022. I love it here so much because I get a lot of attention by just walking around the neighborhood</p> 
+          <h2>Things I love</h2>
+            <p>I love going on walks in Summer and eating strawberries that are handfed to me by my human mom.</p> 
          </div>
         <div class="col-5">
-          <button type="button" class="btn btn-primary">Dm Me!</button>
+          <h2>Things I hate</h2>
+            <p>I don't like rain because I'm always forced to wear rain shoes and coat on walks.</p> 
          </div>
        </div>
       </div>
