--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
       <div class="row text-center">
         <div class="col-6">
-         <h1> Welcome to Chi's Empire</h1>
+         <h1> Welcome to Chi's Empire!</h1>
         </div>
         <div class="col-6">
          <button type="button" class="btn btn-success">Contact Me</button>
@@ -25,15 +25,15 @@
      <div class="container-fluid">
       <div class="row text-center">
         <div class="col-3">
-          <h2>About Me</h2>
+          <h3>About Me</h3>
           <p>I was born in Mexico in Novemver 2021. My human mom rescued me and brought me to the US in February of 2022. I love it here so much because I get a lot of attention by just walking around the neighborhood</p> 
          </div>
         <div class="col-4">
-          <h2>Things I love</h2>
+          <h3>Things I love</h3>
             <p>I love going on walks in Summer and eating strawberries that are handfed to me by my human mom.</p> 
          </div>
         <div class="col-5">
-          <h2>Things I hate</h2>
+          <h3>Things I hate</h3>
             <p>I don't like rain because I'm always forced to wear rain shoes and coat on walks.</p> 
          </div>
        </div>
